--- a/ejercicio_algo_gradientes.ipynb
+++ b/ejercicio_algo_gradientes.ipynb
@@ -182,6 +182,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "12738606-de84-4e08-92c5-6680f4ba524e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#x_init = 0.5*np.random.normal(size=4)\n",
+    "x_init = np.array([0.0, 0.0, 0.0, 0.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "97cbc3e7-82c7-42d7-b662-64425923d9b8",
    "metadata": {
     "tags": []
@@ -199,7 +212,7 @@
     "    for _ in range(nIter):\n",
     "        p = grad(theta)\n",
     "        theta -= alpha*p\n",
-    "        Theta.append(theta)\n",
+    "        Theta.append(copy(theta))\n",
     "    return np.array(Theta)"
    ]
   },
@@ -212,10 +225,10 @@
    },
    "outputs": [],
    "source": [
-    "x_init = 0.5*np.random.normal(size=4)\n",
+    "#x_init = 0.5*np.random.normal(size=4)\n",
     "gd_params = {\n",
     "    'alpha' : 0.001, \n",
-    "    'nIter' : 100000,\n",
+    "    'nIter' : 10000,\n",
     "}\n",
     "f_params={'X': x_init}"
    ]
@@ -229,8 +242,7 @@
    },
    "outputs": [],
    "source": [
-    "sol_gd = GD(grad=grad, gd_params=gd_params, f_params=f_params)\n",
-    "sol_gd[-1]"
+    "sol_gd = GD(grad=grad, gd_params=gd_params, f_params=f_params)"
    ]
   },
   {
@@ -257,7 +269,7 @@
     "        g = grad(pre_theta)\n",
     "        p = g + eta*p\n",
     "        theta = theta - alpha*p\n",
-    "        Theta.append(theta)\n",
+    "        Theta.append(copy(theta))\n",
     "    return np.array(Theta)"
    ]
   },
@@ -270,14 +282,12 @@
    },
    "outputs": [],
    "source": [
-    "x_init = 0.5*np.random.normal(size=4)\n",
+    "#x_init = 0.5*np.random.normal(size=4)\n",
     "# parámetros de los algoritmos\n",
     "gd_params = {\n",
     "    'alpha'          : 0.001,\n",
     "    'nIter'          : 10000,\n",
     "    'eta'            : 0.9,\n",
-    "    'eta1'           : 0.9,\n",
-    "    'eta2'           : 0.999\n",
     "}\n",
     "\n",
     "# parámetros de la función objetivo\n",
@@ -293,33 +303,142 @@
    },
    "outputs": [],
    "source": [
-    "sol_nag = NAG(grad=grad, gd_params=gd_params, f_params=f_params)\n",
-    "sol_nag[-1]"
+    "sol_nag = NAG(grad=grad, gd_params=gd_params, f_params=f_params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c8c2e11-924b-440f-be07-64194962187b",
+   "metadata": {},
+   "source": [
+    "Descenso de Gradiente Adaptable con Momentum(A DAM) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c82cbfc-65df-48f5-a10b-b2c1d6ea9162",
+   "id": "c06b15d9-bb37-4a0d-b567-ef2e1b661658",
    "metadata": {
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def ADAM(grad=None, gd_params={}, f_params={}):\n",
+    "    '''\n",
+    "    Descenso de Gradiente Adaptable con Momentum(A DAM) \n",
+    "    '''\n",
+    "    epsilon= 1e-8\n",
+    "    nIter    = gd_params['nIter']\n",
+    "    alpha    = gd_params['alphaAdam'] \n",
+    "    eta1     = gd_params['eta1']\n",
+    "    eta2     = gd_params['eta2']\n",
+    "    theta    = f_params['X']\n",
+    "    p        = np.zeros(theta.shape)\n",
+    "    v        = 0.0\n",
+    "    Theta    = []\n",
+    "    eta1_t = eta1\n",
+    "    eta2_t = eta2\n",
+    "    for t in range(nIter):\n",
+    "        g  = grad(theta)\n",
+    "        p  = eta1*p + (1.0-eta1)*g\n",
+    "        v  = eta2*v + (1.0-eta2)*(g**2)\n",
+    "        ph = p/(1.0-eta1_t)\n",
+    "        vh = v/(1.0-eta2_t)\n",
+    "        theta = theta - alpha * ph / (np.sqrt(vh)+epsilon)\n",
+    "        eta1_t *= eta1\n",
+    "        eta2_t *= eta2\n",
+    "        Theta.append(copy(theta))\n",
+    "    return np.array(Theta)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20f9ce71-4bf7-4826-bb08-0223d92f0e0b",
-   "metadata": {},
+   "id": "bfcf903a-df03-4ceb-af42-2bb39e5be2ef",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "#x_init = 0.5*np.random.normal(size=4)\n",
+    "# parámetros de los algoritmos\n",
+    "gd_params = {\n",
+    "    'alphaAdam'      : 0.01,\n",
+    "    'nIter'          : 10000,\n",
+    "    'eta'            : 0.9,\n",
+    "    'eta1'           : 0.9,\n",
+    "    'eta2'           : 0.999\n",
+    "}\n",
+    "\n",
+    "# parámetros de la función objetivo\n",
+    "f_params={'X': x_init}"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c06b15d9-bb37-4a0d-b567-ef2e1b661658",
-   "metadata": {},
+   "id": "bc4cbf0f-6f89-4e12-8af1-a6086508cf42",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "sol_adam = ADAM(grad=grad, gd_params=gd_params, f_params=f_params)\n",
+    "sol_adam[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "310abbb7-3b1a-4a29-ad43-66c8d35a0c7b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def array_rosenbrock(x):\n",
+    "    x1 = np.array([e[0] for e in x])\n",
+    "    x2 = np.array([e[1] for e in x])\n",
+    "    x3 = np.array([e[2] for e in x])\n",
+    "    x4 = np.array([e[3] for e in x])\n",
+    "    return 100*(x1**2-x2)**2 + (x1-1)**2 + 100*(x3**2-x4)**2 + (x3-1)**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02de8a2f-687d-4452-8f24-2f6359ed84ae",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plt.plot(array_rosenbrock(sol_gd[:5000]), label='Simple GD')\n",
+    "plt.plot(array_rosenbrock(sol_nag[:5000]), label='NAG')\n",
+    "plt.plot(array_rosenbrock(sol_adam[:5000]), label='ADAM')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5d5bb48-e0bd-4e06-94d3-bb7047c3b223",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plt.plot(array_rosenbrock(sol_adam[:1000]), label='ADAM')\n",
+    "plt.plot(array_rosenbrock(sol_nag[:1000]), label='NAG')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c5d9ab2-5826-4c24-ab38-a8b2a7d33aef",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": []
   }
