Adding missing legend

--- a/ejercicio_algo_gradientes.ipynb
+++ b/ejercicio_algo_gradientes.ipynb
@@ -429,7 +429,8 @@
    "outputs": [],
    "source": [
     "plt.plot(array_rosenbrock(sol_adam[:1000]), label='ADAM')\n",
-    "plt.plot(array_rosenbrock(sol_nag[:1000]), label='NAG')"
+    "plt.plot(array_rosenbrock(sol_nag[:1000]), label='NAG')\n",
+    "plt.legend()"
    ]
   },
   {
